Fixed spacing issues, made alert totals single line.

--- a/public/assets/less/homepage.less
+++ b/public/assets/less/homepage.less
@@ -8,6 +8,11 @@
     padding: 0;
 }
 
+.metric .fa-spin {
+    display: inline-block !important;
+    margin-left: 5px;
+}
+
 .victory-card .card-title {
     font-size: 22px;
 }
